--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 
 }
 .nav-title{
@@ -42,4 +43,16 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+/* .header related style */
+.header{
+    background-color: white;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-picture{
+    width: 400px;
 }
