--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -46,10 +46,13 @@ nav a{
 }
 /* .header related style */
 .header{
-    background-color: white;
+    background-color: #fff8f3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position-x: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
 }
